# sitemon

./: README.md  pyproject.toml
.github/workflows/: test.yml
conf_templates/: db-admin.json  kafka-server.json  pg-server.json  sitemon-db.json
e2e_tests/: e2e-test-monitor.py
sitemon/: common.py  db.py  kafka.py  monitor.py  recorder.py
tests/: test_monitor.py
