[tool.poetry]
name = "sitemon"
version = "0.1.0"
description = ""
authors = ["'Denis Zalevskiy' <'denis@visfun.org'>"]

[tool.poetry.dependencies]
python = "^3.8"
aiokafka = "^0.7.0"
httpx = "^0.16.1"
asyncpg = "^0.21.0"
pytest-asyncio = "^0.14.0"
asynctest = "^0.13.0"
pytest-mock = "^3.4.0"
pytest-subtests = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10.1"
tidypy = "^0.18.0"
pytest-mypy = "^0.8.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "" # --verbose --mypy --tidypy

[tool.tidypy]
exclude = [
        ".+.egg-info",
        ".eggs",
        ".mypy_cache",
        ".pytest_cache",
        'poetry.lock',
]
vulture = {use = false}

[tool.tidypy.report]
custom = {format = '{filename}|{line:>05}|{character:<3}|{tool}|{code}|{message}'}

[tool.tidypy.pydocstyle]
disabled = [
         'D100',
         'D104',
         'D105',
         'D202',
         'D203',
         'D212',
         'D400',
         'D415',
]

[tool.tidypy.pycodestyle]
max-line-length = 100
disabled = [
         'E501',
         'W503',
]

[tool.tidypy.pylint]
disabled = [
         'duplicate-code',
         'invalid-name',
         'missing-docstring',
]

[tool.tidypy.bandit]
disabled = [
         'B101',
]

[tool.tidypy.secrets]
disabled = [
         'BasicAuthDetector',
         'KeywordDetector',
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

